fixed margin overlap in footer section

--- a/index.css
+++ b/index.css
@@ -92,7 +92,10 @@ nav ul li a {
   text-decoration: none;
   color: white;
   font-size: 1.5rem;
-  transition: margin 0.5s;
+  transition: all 0.7s;
+}
+nav ul li a.active {
+  color: var(--color-primary);
 }
 nav ul li a:hover {
   color: var(--color-primary);
@@ -688,7 +691,7 @@ h5 {
     max-width: 650px;
     flex-direction: row;
     justify-content: space-between;
-    margin: 5rem auto;
+    margin: 0 auto;
   }
   #footer h5 {
     font-size: 1.3rem;
